# cpp-pinit

./: README.md  cpp-init.py  cpp-pinit-global.yml  cpp-pinit.py
myproj/: CMakeLists.txt
myproj/benchmarks/: CMakeLists.txt
myproj/myproj/: CMakeLists.txt
myproj/security/: CMakeLists.txt
myproj/tests/: CMakeLists.txt
samples/cmake/: benchmarks.py  config.py  main.py  security.py  target.py  tests.py
samples/git/: gitignore.py
samples/ide/: clang_format.py
